ui2022/src/styles.scss
@import 'ag-grid-community/dist/styles/ag-grid.css';
@import 'ag-grid-community/dist/styles/ag-theme-alpine.css';
@import '~leaflet/dist/leaflet.css';
@import 'bulma/bulma.sass';

// Fonts
@import './assets/fonts/bull5/bull5.css';
@import './assets/fonts/nbArchitect/nbArchitect.css';
@import './app/util/material/custom-theme.scss';

:root {
  --background: #dcdcd6;
  --black: #212121;
  --green: #969900;
  --lightGreen: #dcff61;
  --dark-brown: #3c3335;
  --dark-brown-hover: #332b2d;
  --brown: #65594e;
  --dark-green: #959349;
}

html,
body {
  overflow: auto;
  min-height: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: var(--background);
  font-family: 'Bull-mono', sans-serif;
  font-size: 20px;
}

@media only screen and (max-width: 768px) {
  html,
  body {
    font-size: 16px;
  }
}

.columns {
  margin: 0 !important;
}

mat-divider {
  margin-top: 15px !important;
  margin-bottom: 15px !important;
}

.mat-raised-button.mat-warn {
  color: #fff !important;
}

snack-bar-container {
  background-color: #ff5a00 !important;
  color: #fff !important;
  .mat-simple-snackbar-action {
    color: #fff !important;
  }
}

.success-snackbar {
  background-color: var(--green) !important;
  color: #fff !important;
}

.no-display {
  display: none;
}

.form-wrapper {
  padding: 15px;
}

.spacer {
  height: 15px;
}

.top-row-btn {
  margin-top: 15px !important;
  margin-bottom: 15px !important;
}

.mat-form-field-flex {
  padding: 0 0.5rem !important;
}

.breadcrumb {
  min-height: 1rem;
}

.breadcrumb-active {
  text-decoration: underline !important;
}

.center {
  text-align: center;
}

.image-wrapper {
  width: 100%;
  position: relative;

  img {
    height: 100%;
    min-width: 100%;
  }
}

.mat-toolbar-single-row {
  padding: 0 !important;
}

///////// radio button
.category {
  display: flex;
  margin-bottom: 1rem;
  span {
    font-size: 1.25rem;
  }
}

.circle {
  padding: 2px;
  border-style: solid;
  border-width: 1px;
  width: 21px;
  border-radius: 50%;
  height: 21px;
  margin-right: 10px;
  div {
    display: inline-block;
    width: 15px;
    height: 15px;
    border-radius: 50%;
  }
}
.circle-active {
  div {
    background: var(--dark-brown);
  }
}
.circle:hover {
  div {
    background: var(--green);
  }
}

.ag-icon {
  font-family: 'agGridAlpine' !important;
}

.mat-menu-panel {
  background: var(--background);
  padding: 1rem !important;
}

// finances page custom styles
.finances,
.partner {
  ul,
  table {
    margin-bottom: 0.75rem;
  }

  li,
  div,
  td {
    font-family: 'Bull-mono' !important;
    font-size: 1rem;
    line-height: 1.25rem;
    letter-spacing: 0.02em !important;
    text-shadow: 0 0 8px var(--background);
  }

  td {
    font-size: 0.8rem;
    p {
      font-size: 0.8rem;
    }
  }
}

.mat-badge-content {
  top: 10px !important;
  right: 10px !important;
  width: 60px !important;
  height: 17px !important;
  border-radius: 0 !important;
  background: transparent !important;
}

.leaflet-container {
  z-index: 1;
}

.mat-form-field-appearance-fill.mat-form-field-disabled .mat-form-field-flex {
  background-color: rgb(0, 0, 0, 0.04);
}

.offer:hover {
  circle {
    fill: var(--green);
  }
}

